tests/ui/error-codes/E0223.stderr
error[E0223]: ambiguous associated type
  --> $DIR/E0223.rs:8:14
   |
LL |     let foo: MyTrait::X;
   |              ^^^^^^^^^^ help: use fully-qualified syntax: `<MyStruct as MyTrait>::X`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0223`.
